--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,6 @@ services:
     env_file:
       - .env
     environment:
-      DB_HOST: postgres  # <-- перезаписываем тут!
+      DB_HOST: postgres
 volumes:
   postgres_data:
